fix placement of some text in binaural on safari

--- a/css/knobrot.css
+++ b/css/knobrot.css
@@ -25,7 +25,6 @@
  .knob-container{
 	text-align: center;
 	width: 100px;
-	height: 100px;
 	/*float: left;*/
  }
  
